# opengl

./: CMakeLists.txt  run.sh
include/: EBO.h  VAO.h  VBO.h  camera.h  mesh.h  shader.h  texture.h
shaders/: default.frag
src/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  glad.c  main.cpp  mesh.cpp  shader.cpp  texture.cpp
